--- a/menu-mobile-1.html
+++ b/menu-mobile-1.html
@@ -8,11 +8,46 @@
 	<title>Sample Mobile Menu 1</title>
 	<meta name="description" content="Sample slide-out navigation menu for mobile screens.">
 
-	<meta name="author" content="Mary Smith">
+	<meta name="author" content="Romulo Passos">
 
 	<link rel="stylesheet" href="assets/css/menu-mobile-1.css">
 
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,400i,900,900i" rel="stylesheet"> 
+	
+	<!-- Cookie consent code-->
+	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
+	<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+	<script>
+	window.addEventListener("load", function(){
+	window.cookieconsent.initialise({
+	  "palette": {
+		"popup": {
+		  "background": "#383b75"
+		},
+		"button": {
+		  "background": "#f1d600"
+		}
+	  },
+	  "theme": "classic",
+	  "content": {
+		"href": "https://rompassos.github.io/privacy.html"
+	  }
+	})});
+	
+	</script>
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134860418-1"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+  	gtag('config', 'UA-134860418-1');
+	</script>
+
+	<!-- /Google Analytics -->
+
 
 </head>
 
@@ -22,7 +57,7 @@
 
 <div class="container-menu-bar-mobile menu-mobile-dark">
 	<div class="item-logo">
-		<img src="assets/img/logo-blue.png" alt="logo">
+		<img src="assets/img/blue-logo.jpg" alt="logo">
 	</div>
 	<div class="item-icon">
 		<div class="bar1"></div>
@@ -33,7 +68,7 @@
 
 <div class="container-menu-options-mobile menu-mobile-dark">
 	<ul>
-		<li><a href="#">Home</a></li>
+		<li><a href="../rompassos.github.io.index.html">Home</a></li>
 		<li><a href="#">Products</a></li>
 		<li><a href="#">Services</a></li>
 		<li><a href="#">About Us</a></li>
@@ -49,13 +84,13 @@
 
 	<div class="item-logo">
 		<a href="index.html">
-			<img src="assets/img/logo-blue.png" alt="logo">
+			<img src="assets/img/blue-logo.jpg" alt="logo">
 		</a>
 	</div>
 
 	<div class="item-menu">
 		<ul>
-			<li><a href="#">Home</a></li>
+			<li><a href="../rompassos.github.io.index.html">Home</a></li>
 			<li><a href="#">Products</a></li>
 			<li><a href="#">Services</a></li>
 			<li><a href="#">About Us</a></li>
