--- a/menu-mobile-1.html
+++ b/menu-mobile-1.html
@@ -68,7 +68,7 @@
 
 <div class="container-menu-options-mobile menu-mobile-dark">
 	<ul>
-		<li><a href="../rompassos.github.io.index.html">Home</a></li>
+		<li><a href="../rompassos.github.io">Home</a></li>
 		<li><a href="#">Products</a></li>
 		<li><a href="#">Services</a></li>
 		<li><a href="#">About Us</a></li>
@@ -90,7 +90,7 @@
 
 	<div class="item-menu">
 		<ul>
-			<li><a href="../rompassos.github.io.index.html">Home</a></li>
+			<li><a href="../rompassos.github.io">Home</a></li>
 			<li><a href="#">Products</a></li>
 			<li><a href="#">Services</a></li>
 			<li><a href="#">About Us</a></li>
