--- a/menu-mobile-1.html
+++ b/menu-mobile-1.html
@@ -68,7 +68,7 @@
 
 <div class="container-menu-options-mobile menu-mobile-dark">
 	<ul>
-		<li><a href="../rompassos.github.io">Home</a></li>
+		<li><a href="https://rompassos.github.io">Home</a></li>
 		<li><a href="#">Products</a></li>
 		<li><a href="#">Services</a></li>
 		<li><a href="#">About Us</a></li>
@@ -83,14 +83,14 @@
 <div class="container-menu-desktop menu-desktop-dark">
 
 	<div class="item-logo">
-		<a href="index.html">
+		<a href="https://rompassos.github.io">
 			<img src="assets/img/blue-logo.jpg" alt="logo">
 		</a>
 	</div>
 
 	<div class="item-menu">
 		<ul>
-			<li><a href="../rompassos.github.io">Home</a></li>
+			<li><a href="https://rompassos.github.io">Home</a></li>
 			<li><a href="#">Products</a></li>
 			<li><a href="#">Services</a></li>
 			<li><a href="#">About Us</a></li>
